
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Preference
        app:fragment="com.brontapps.climatefight.SettingsActivity$MessagesFragment"
        app:icon="@drawable/messages"
        app:key="messages_header"
        app:title="@string/messages_header" />

    <Preference
        app:fragment="com.brontapps.climatefight.SettingsActivity$SyncFragment"
        app:icon="@drawable/sync"
        app:key="sync_header"
        app:title="@string/sync_header" /-->

    <SwitchPreferenceCompat
        app:key="prettytime"
        app:icon="@drawable/ic_time"
        app:summaryOff="@string/prettytime_summary_off"
        app:summaryOn="@string/prettytime_summary_on"
        app:title="@string/prettytime_title" />

    <SwitchPreferenceCompat
        app:key="location"
        app:icon="@drawable/ic_my_location"
        app:summaryOff="@string/location_summary_off"
        app:summaryOn="@string/location_summary_on"
        app:title="@string/location_title" />

    <ListPreference
        app:key="sortcomments"
        app:icon="@drawable/ic_filter_list"
        app:summary="@string/sort_pref_summary"
        app:title="@string/sort_pref_title"
        app:entries="@array/sort_entries"
        app:entryValues="@array/sort_values"
        app:defaultValue="pop"
        />

    <ListPreference
        app:key="darkmode"
        app:icon="@drawable/ic_dark"
        app:summary="@string/darkmode_summary"
        app:title="@string/darkmode_title"
        app:entries="@array/dark_entries"
        app:entryValues="@array/dark_values"
        app:defaultValue="auto"
        />

</androidx.preference.PreferenceScreen>
