<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/main_add"
        app:showAsAction="always"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:iconTint="@color/white"
        android:icon="@drawable/ic_add_black"/>
    <item android:id="@+id/main_account"
        app:showAsAction="always"
        android:title="@string/action_account"
        android:orderInCategory="100"
        app:iconTint="@color/white"
        android:icon="@drawable/ic_account_circle_black"/>
    <item android:id="@+id/main_settings"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:iconTint="@color/white"
        android:icon="@drawable/ic_settings_black"/>
    <item android:id="@+id/main_about"
        app:showAsAction="ifRoom"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:iconTint="@color/white"
        android:icon="@drawable/ic_info"/>

</menu>